[gd_scene load_steps=38 format=2]

[ext_resource path="res://Assets/Enemys/enemyBomb/load/enemyBombLoad0010.png" type="Texture" id=1]
[ext_resource path="res://Assets/Enemys/enemyBomb/air/enemyBombAir0002.png" type="Texture" id=2]
[ext_resource path="res://Assets/Enemys/enemyBomb/load/enemyBombLoad0011.png" type="Texture" id=3]
[ext_resource path="res://Assets/Enemys/enemyBomb/run/enemyBombRun0003.png" type="Texture" id=4]
[ext_resource path="res://Assets/Enemys/enemyBomb/wait/enemyBombWait0000.png" type="Texture" id=5]
[ext_resource path="res://Assets/Enemys/enemyBomb/attack/enemyBombAttack0005.png" type="Texture" id=6]
[ext_resource path="res://Assets/Enemys/enemyBomb/attack/enemyBombAttack0006.png" type="Texture" id=7]
[ext_resource path="res://Assets/Enemys/enemyBomb/attack/enemyBombAttack0008.png" type="Texture" id=8]
[ext_resource path="res://Assets/Enemys/enemyBomb/wait/enemyBombWait0001.png" type="Texture" id=9]
[ext_resource path="res://Assets/Enemys/enemyBomb/attack/enemyBombAttack0009.png" type="Texture" id=10]
[ext_resource path="res://Assets/Enemys/enemyBomb/destroy/enemyBombDestroy0012.png" type="Texture" id=11]
[ext_resource path="res://Assets/Enemys/enemyBomb/destroy/enemyBombDestroy0013.png" type="Texture" id=12]
[ext_resource path="res://Assets/Enemys/enemyBomb/destroy/enemyBombDestroy0014.png" type="Texture" id=13]
[ext_resource path="res://Assets/Enemys/enemyBomb/destroy/enemyBombDestroy0015.png" type="Texture" id=14]
[ext_resource path="res://Assets/Enemys/enemyBomb/destroy/enemyBombDestroy0016.png" type="Texture" id=15]
[ext_resource path="res://Assets/Enemys/enemyBomb/destroy/enemyBombDestroy0017.png" type="Texture" id=16]
[ext_resource path="res://Assets/Enemys/enemyBomb/destroy/enemyBombDestroy0018.png" type="Texture" id=17]
[ext_resource path="res://Assets/Enemys/enemyBomb/attack/enemyBombAttack0007.png" type="Texture" id=18]
[ext_resource path="res://Assets/Enemys/enemyBomb/run/enemyBombRun0004.png" type="Texture" id=19]
[ext_resource path="res://bombEnemy.gd" type="Script" id=20]
[ext_resource path="res://Assets/Enemys/enemyBomb/bomb/enemyBombBomb0004.png" type="Texture" id=21]
[ext_resource path="res://Assets/Enemys/enemyBomb/bomb/enemyBombBomb0002.png" type="Texture" id=22]
[ext_resource path="res://Assets/Enemys/enemyBomb/bomb/enemyBombBomb0007.png" type="Texture" id=23]
[ext_resource path="res://Assets/Enemys/enemyBomb/bomb/enemyBombBomb0008.png" type="Texture" id=24]
[ext_resource path="res://Assets/Enemys/enemyBomb/bomb/enemyBombBomb0005.png" type="Texture" id=25]
[ext_resource path="res://Assets/Enemys/enemyBomb/bomb/enemyBombBomb0003.png" type="Texture" id=26]
[ext_resource path="res://Assets/Enemys/enemyBomb/bomb/enemyBombBomb0000.png" type="Texture" id=27]
[ext_resource path="res://Assets/Enemys/enemyBomb/bomb/enemyBombBomb0006.png" type="Texture" id=28]
[ext_resource path="res://Assets/Enemys/enemyBomb/bomb/enemyBombBomb0001.png" type="Texture" id=29]
[ext_resource path="res://Assets/audio efects/ventilator.ogg" type="AudioStream" id=30]
[ext_resource path="res://Assets/audio efects/destroy.ogg" type="AudioStream" id=31]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 18 ), ExtResource( 8 ), ExtResource( 10 ) ],
"loop": true,
"name": "attack",
"speed": 6.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "load",
"speed": 3.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 9 ) ],
"loop": true,
"name": "wait",
"speed": 3.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "destroy",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "air",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 19 ) ],
"loop": true,
"name": "run",
"speed": 7.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15.2423, 15.016 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 85.2105, 19.135 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 76.2307, 10.7504 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 27 ), ExtResource( 29 ), ExtResource( 22 ), ExtResource( 21 ), ExtResource( 26 ), ExtResource( 25 ), ExtResource( 28 ), ExtResource( 23 ), ExtResource( 24 ), null ],
"loop": false,
"name": "active",
"speed": 35.0
}, {
"frames": [  ],
"loop": true,
"name": "off",
"speed": 5.0
} ]

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 2
emission_box_extents = Vector3( 4, 4, 1 )
flag_disable_z = true
direction = Vector3( 1, 1, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 70.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 8.0
scale_random = 1.0
color = Color( 0.101961, 0.164706, 0.901961, 1 )

[node name="bombEnemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 10
script = ExtResource( 20 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "wait"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3.9904 )
shape = SubResource( 2 )

[node name="visionChecker1" type="RayCast2D" parent="."]
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 230 )

[node name="visionChecker2" type="RayCast2D" parent="."]
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 230 )

[node name="FloorChecker" type="RayCast2D" parent="."]
enabled = true
collision_mask = 2147483656

[node name="visionArea1" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="visionArea1"]
position = Vector2( 98.3152, -11.9322 )
shape = SubResource( 3 )

[node name="visionArea2" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="visionArea2"]
position = Vector2( -95.8126, -11.9322 )
shape = SubResource( 3 )

[node name="areaAttack1" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="areaAttack1"]
position = Vector2( 91.5804, -11.9322 )
shape = SubResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="areaAttack1"]
position = Vector2( 91.5804, -7.9026 )
frames = SubResource( 5 )
playing = true

[node name="areaAttack2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="areaAttack2"]
position = Vector2( -87.9554, -11.9322 )
shape = SubResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="areaAttack2"]
position = Vector2( -95.8126, -7.96368 )
frames = SubResource( 5 )
playing = true
flip_h = true

[node name="timerCD" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="timerDZ" type="Timer" parent="."]
wait_time = 0.1

[node name="timerAttack1" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="timerAttack2" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Particles2D" type="Particles2D" parent="."]
visible = false
amount = 28
explosiveness = 1.0
process_material = SubResource( 6 )

[node name="timerHit" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 30 )
volume_db = -8.565
attenuation = 0.517632

[node name="destroy" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 31 )
volume_db = -17.129
attenuation = 0.482968

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="visionArea1" to="." method="_on_visionArea1_body_entered"]
[connection signal="body_entered" from="visionArea2" to="." method="_on_visionArea2_body_entered"]
[connection signal="body_entered" from="areaAttack1" to="." method="_on_areaAttack1_body_entered"]
[connection signal="body_entered" from="areaAttack2" to="." method="_on_areaAttack2_body_entered"]
[connection signal="timeout" from="timerCD" to="." method="_on_timerCD_timeout"]
[connection signal="timeout" from="timerDZ" to="." method="_on_timerDZ_timeout"]
[connection signal="timeout" from="timerAttack1" to="." method="_on_timerAttack1_timeout"]
[connection signal="timeout" from="timerAttack2" to="." method="_on_timerAttack2_timeout"]
[connection signal="timeout" from="timerHit" to="." method="_on_timerHit_timeout"]
